# cmake-mingw-example

./: .gitignore  CMakeLists.txt  README.md  exec-compile-time.cpp  exec-runtime.cpp  executable.cpp  shared_lib.cpp  shared_lib.h
